MAHOUT-633 new iterators over SequenceFiles, used in 90% of the code involving reading SequenceFiles; other refactoring of iterators and some related HDFS usages (PathFilters); some small style changes along the way too
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@1087225 13f79535-47bb-0310-9956-ffa450edef68